	* [Server] Fixed crash while connecting to the server
	* [SoundSystem] Fix audio buffer under-runs
	* [Convars] Added check to prevent CVAR_SYTEMINFO from overwriting existing convars
	* [SoundSystem] Fixed memory leak
	* [Misc] Fixed compiling
	* [Client] Ensure timescale is 1 once dropping to main menu from e.g timescaled demo
	* [Engine] Don't do twice "vid_restart" on first run

2021-04-11 dGr8LookinSparky <hissparkyness@gmail.com>
	* [Client]Fix the mouse sensitivity for when cl_mouseAccel is disabled.

2021-04-11 Dusan Jocic <dusanjocic@msn>
	* [Console] Fixed problems with console tab and input
	* [Console] Specify console tab to dump in the log file
	* [SoundSystem] Don't play sound while minimized
	* [SoundSystem] Don't play sound even if application is unfocused
	* [Server Demos] Fixed automatically recording server-side demos
	* [Athentication Server] Changed default port address for the authentication server
	* [Master Server] Changed default port address for the master server
	* [Client] Fix drop shadows
	* [Client] Unlocked FPS and lag
	* [Network] Experimenting with scrambling packets
	* [Engine] Removed leftovers from the old implementation of server-side demos

2021-04-10 Dusan Jocic <dusanjocic@msn>
	* [Libraries] Cleaning

2021-04-05 Dusan Jocic <dusanjocic@msn>
	* [Console] We are not using for a long time TTY console

2021-04-04 Dusan Jocic <dusanjocic@msn.com>
	* [Filesystem] Changed fs_debug logging option
	* [Engine] Fix mouse locking issues when the mouse would lock at the center of your screen
	* [Engine] Implemented Com_Clampi and simplified timeNudge
	* [SoundSystem] Don't play any sound if while application is minimized
	* [SoundSystem] Don't play any sound if while application is unfocused
	* [Engine] Allow sending "userinfo" while the menu is open
	* [Filesystem] Changed fs_debug logging option
	* [Client] Small fixes
	* [Client] Fixed floating-point errors in pitch angle
	* [Console] Implemented console tabs
	